Fix overflow on make an appointment on mammogram

--- a/src/components/dashboard/components/no-mammogram/components/appointment/style/appointment.css
+++ b/src/components/dashboard/components/no-mammogram/components/appointment/style/appointment.css
@@ -4,6 +4,9 @@
   padding: 36px;
   display: flex;
   flex-direction: column;
+
+  height: 100%;
+  overflow: scroll;
 }
 
 .appointment__header
@@ -28,8 +31,8 @@
   font-weight: bold;
   font-size: 16px;
   line-height: 24px;
-  padding-top: 48px;
-  padding-bottom: 64px;
+  padding-top: 20px;
+  padding-bottom: 40px;
 }
 
 .appointment__help-button
